<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="6dp"
    android:id="@+id/main_container">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        app:cardCornerRadius="10dp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:paddingTop="10dp"
                android:text="@string/text_home"
                android:textColor="#797979"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="1dp"
                android:fontFamily="sans-serif-light"
                android:paddingEnd="10dp"
                android:text="@string/user_name"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="23sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#AEE57F84"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/Quote_title"
                    android:textAlignment="center"
                    android:textColor="@color/ivory"
                    android:textSize="15sp"

                    app:fontFamily="sans-serif-light" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="10dp"
                    android:text="@string/Quote_text"
                    android:textColor="@color/ivory"
                    android:textSize="15sp"
                    android:textStyle="italic|bold" />

            </androidx.cardview.widget.CardView>


            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#7CE57F84"
                card_view:ignore="MissingConstraints"
                card_view:layout_editor_absoluteX="0dp"/>

    </LinearLayout>
    </androidx.cardview.widget.CardView>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_Story_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">


                <ImageButton
                    android:id="@+id/add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/add_new"
                    android:onClick="@string/Quote_title"
                    android:scaleX="1.7"
                    android:scaleY="1.7"
                    android:src="@drawable/ic_add_black_24dp"
                    android:tint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.384"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/add_btn_new"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/add_new"
                    android:onClick="@string/Quote_title"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    android:src="@drawable/ic_edit"
                    android:layout_marginStart="100dp"
                    android:tint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.506"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:ignore="MissingConstraints" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="341dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.842" />




            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</LinearLayout>